# DataProjectStarterKit

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
api/: index.html
app/: __init__.py  absenteeism_generator.py  consolidador.py  main.py
app/ETL/: __init__.py  extract.py  load.py  pipeline.py  transform.py
app/consolidado/: consolidated_absenteeism_data.xlsx
app/data/: absenteeism_data_0.xlsx  absenteeism_data_1.xlsx  absenteeism_data_10.xlsx  absenteeism_data_11.xlsx  absenteeism_data_12.xlsx  absenteeism_data_13.xlsx  absenteeism_data_14.xlsx  absenteeism_data_15.xlsx  absenteeism_data_16.xlsx  absenteeism_data_17.xlsx  absenteeism_data_18.xlsx  absenteeism_data_19.xlsx  absenteeism_data_2.xlsx  absenteeism_data_20.xlsx  absenteeism_data_21.xlsx  absenteeism_data_22.xlsx  absenteeism_data_23.xlsx  absenteeism_data_24.xlsx  (+32 more)
data/: absenteeism_data_0.xlsx  absenteeism_data_1.xlsx  absenteeism_data_10.xlsx  absenteeism_data_11.xlsx  absenteeism_data_15.xlsx  absenteeism_data_16.xlsx  absenteeism_data_19.xlsx  absenteeism_data_2.xlsx  absenteeism_data_20.xlsx  absenteeism_data_24.xlsx  absenteeism_data_26.xlsx  absenteeism_data_29.xlsx  absenteeism_data_31.xlsx  absenteeism_data_32.xlsx  absenteeism_data_33.xlsx  absenteeism_data_34.xlsx  absenteeism_data_36.xlsx  absenteeism_data_38.xlsx  absenteeism_data_39.xlsx  absenteeism_data_41.xlsx  absenteeism_data_42.xlsx  absenteeism_data_44.xlsx  absenteeism_data_45.xlsx  absenteeism_data_46.xlsx  absenteeism_data_5.xlsx  absenteeism_data_6.xlsx  absenteeism_data_7.xlsx
docs/: api.md  index.md
search/: search_index.json
tests/: __init__.py  test_consolidador.py  test_integration.py  test_unitarios.py
(+53 files in other folders)
