[tool.poetry]
name = "dataprojectstarterkit"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
faker = "^19.6.2"
pandas = "^2.1.1"
pytest = "^7.4.2"
openpyxl = "^3.1.2"
blue = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
